--- a/app/admin/template/_default/layout.base.twig
+++ b/app/admin/template/_default/layout.base.twig
@@ -7,6 +7,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Tiny Invoice</title>
 
+	<link type="text/css" href="/typeahead.js-bootstrap-css/typeaheadjs.css" rel="stylesheet">
 	<link rel="stylesheet" href="/bootstrap/dist/css/bootstrap.min.css" type="text/css" media="handheld, all">
 	<link rel="stylesheet" href="/eonasdan-bootstrap-datetimepicker/build/css/bootstrap-datetimepicker.min.css" />
 	<link rel="stylesheet" href="/bootstrap-multiselect/dist/css/bootstrap-multiselect.css" />
@@ -30,6 +31,7 @@
 	<script type="text/javascript" src="/bootstrap-checkbox/js/bootstrap-checkbox.js"></script>
 	<script type="text/javascript" src="/jquery-mask-plugin/dist/jquery.mask.min.js"></script>
 	<script type="text/javascript" src="/urijs/src/URI.js"></script>
+	<script type="text/javascript" src="/typeahead.js/dist/typeahead.bundle.min.js"></script>
 
 	<!-- Syntax check in extractor editor -->
 	<script type="text/javascript" src="/codemirror/lib/codemirror.js"></script>
