--- a/app/admin/template/setting/extractor/transaction.twig
+++ b/app/admin/template/setting/extractor/transaction.twig
@@ -257,6 +257,29 @@
 
 		<div class="panel panel-default">
 			<div class="panel-heading">
+				{% trans "Filter" %}
+			</div>
+			<div class="panel-body">
+				<form method="post" action="/setting/extractor/transaction" class="form-horizontal">
+					<div class="form-group">
+						<label class="col-xs-3 control-label">{% trans "Search" %}</label>
+						<div class="col-xs-5">
+							<input type="text" name="search" class="form-control" value="{{ pager.get_search() }}">
+						</div>
+					</div>
+					<div class="form-group">
+						<div class="col-xs-3 col-xs-offset-3">
+							<button class="btn btn-primary">
+								{% trans "Search" %}
+							</button>
+						</div>
+					</div>
+				</form>
+			</div>
+		</div>
+
+		<div class="panel panel-default">
+			<div class="panel-heading">
 				{{ base.pager_count(pager.item_count) }}
 			</div>
 			<div class="panel-body">
