--- a/app/admin/template/financial/account/modal.account_settings.twig
+++ b/app/admin/template/financial/account/modal.account_settings.twig
@@ -10,7 +10,7 @@
 	<div class="form-group">
 		<label class="col-xs-4 control-label">{% trans "Alias" %}</label>
 		<div class="col-xs-8">
-			<input type="text" class="form-control" name="bank_account[alias]" />
+			<input type="text" class="form-control" name="bank_account[alias]" value="{{ bank_account.alias }}" />
 		</div>
 	</div>
 
