--- a/app/admin/template/administrative/document/invoice.twig
+++ b/app/admin/template/administrative/document/invoice.twig
@@ -8,8 +8,10 @@
 			$('#toggle-advanced').click(function() {
 				if ($('.form-advanced').first().hasClass('hide')) {
 					$('.form-advanced').removeClass('hide')
+					$('#input_advanced').val(1);
 				} else {
 					$('.form-advanced').addClass('hide')
+					$('#input_advanced').val(0);
 				}
 			});
 		});
@@ -42,6 +44,7 @@
 		</div>
 		<div class="panel-body">
 			<form method="post" action="{{ env.module.get_path() }}" class="form-horizontal">
+				<input type="hidden" id="input_advanced" name="advanced" value="{% if env.sticky_session.advanced %}1{% else %}0{% endif %}">
 				<div class="form-group">
 					<label class="col-xs-3 control-label">{% trans "Search" %}</label>
 					<div class="col-xs-9">
@@ -49,14 +52,14 @@
 					</div>
 				</div>
 
-				<div class="form-group form-advanced hide">
+				<div class="form-group form-advanced {% if env.sticky_session.advanced is not defined %}hide{% endif %}">
 					<label class="col-xs-3 control-label">{% trans "Tags" %}</label>
 					<div class="col-xs-9">
 						<input type="text" class="form-control autocomplete-tag" name="tag_ids" value="" />
 					</div>
 				</div>
 
-				<div class="form-group form-advanced hide">
+				<div class="form-group form-advanced {% if env.sticky_session.advanced is not defined %}hide{% endif %}">
 					<label class="col-xs-3 control-label">{% trans "Supplier" %}</label>
 					<div class="col-xs-9">
 						<select name="supplier_id" class="form-control">
@@ -68,7 +71,7 @@
 					</div>
 				</div>
 
-				<div class="form-group form-advanced hide">
+				<div class="form-group form-advanced {% if env.sticky_session.advanced is not defined %}hide{% endif %}">
 					<label class="col-xs-3 control-label">{% trans "Paid" %}</label>
 					<div class="col-xs-9">
 						<select name="paid" class="form-control">
@@ -79,7 +82,7 @@
 					</div>
 				</div>
 
-				<div class="form-group form-advanced hide">
+				<div class="form-group form-advanced {% if env.sticky_session.advanced is not defined %}hide{% endif %}">
 					<label class="col-xs-3 control-label">{% trans "Booking status" %}</label>
 					<div class="col-xs-9">
 						<select name="accounting_identifier" class="form-control">
